add navbar html

--- a/index.html
+++ b/index.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Library UI-Reskill Americans</title>
+    <title>Library UI Project</title>
 </head>
 <body>
-    
+    <nav>
+        <img src="img/home-pic.png" alt="home image" class="home-pic">
+        <li>Residents</li>
+        <li>Location & Hours</li>
+        <li>About Us</li>
+        <div class="log">
+            <img src="img/GOLDPEACHCOUNTY.png" alt="logo" class="logo">
+            <div>
+                <hr>
+                <h3>virginia</h3>
+                <hr>
+            </div>
+        </div>
+        <li>Books & More</li>
+        <li>My Account</li>
+        <li>My Cart</li>
+        <img src="img/search-bar.png" alt="search bar">
+    </nav>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
