--- a/index.html
+++ b/index.html
@@ -4,32 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jaldi:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Library UI Project</title>
 </head>
 <body>
     <nav>
-        <img src="img/home-pic.png" alt="home image" class="home-pic">
+        <img src="/img/home-pic.png" alt="home picture" class="home-icon">
         <li>Residents</li>
         <li>Location & Hours</li>
         <li>About Us</li>
-        <div class="log">
-            <img src="img/GOLDPEACHCOUNTY.png" alt="logo" class="logo">
-            <div>
-                <hr>
-                <h3>virginia</h3>
-                <hr>
+        <div class="logo-section">
+            <img src="/img/GOLDPEACHCOUNTY.png" alt="library-name" class="logo">
+            <div class="logo-text">
+                <div class="yellow-bar"></div>
+                <p>virginia</p>
+                <div class="yellow-bar"></div>
             </div>
         </div>
         <li>Books & More</li>
         <li>My Account</li>
         <li>My Cart</li>
-        <img src="img/search-bar.png" alt="search bar">
+        <!-- <img src="/img/search-bar.png" alt="search-bar"> -->
+        <div class="search">
+            <input type="text" placeholder="Search..." class="search-bar">
+            <img src="/img/search-icon.png" alt="search-icon" class="search-icon">
+        </div>
     </nav>
-    <main>
-
-    </main>
-    <footer>
-
-    </footer>
 </body>
 </html>
