add images, build out index.html, and style.css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="/img/home-pic.png" alt="home picture" class="home-icon">
         <li>Residents</li>
         <li>Location & Hours</li>
-        <li>About Us</li>
+        <li><a href="about.html">About Us</a></li>
         <div class="logo-section">
             <img src="/img/GOLDPEACHCOUNTY.png" alt="library-name" class="logo">
             <div class="logo-text">
@@ -33,5 +33,42 @@
             <img src="/img/search-icon.png" alt="search-icon" class="search-icon">
         </div>
     </nav>
+
+    <div class="hero">
+        <div class="top-gray-bar"></div>
+        <div class="yellow-bar-hero">
+            <h1>because libraries = strong communities.</h1>
+        </div>
+        <div class="hero-columns">
+            <div class="hero-img-1">
+            </div>
+            <div class="hero-img-2">
+            </div>
+            <div class="hero-img-3">
+                <div class="hero-img-3-text">
+                    <h5>contact information:</h5>
+                    <p><strong>Office:</strong> 8:00-4:30 M-F. Branch hours vary. Please call your branch's direct line with account & ebook questions.</p>
+                        <div class="text1">
+                            <img src="/img/phone.png" alt="phone icon" class="icon"/><p>123-456-6780 | T 804</p>
+                        </div>
+                        <div class="text2">
+                            <img src="/img/email.png" alt="email icon" class="icon" /><p>Library@goldpeachcounty.gov</p>
+                        </div>
+                            
+                        <div class="text3">
+                            <img src="/img/map.png" alt="map icon" class="icon" /><p>12000 Peachland Dr., Suite 444 Peachland, VA 12345</p>
+                        </div>  
+                </div>
+            </div>
+        </div>
+        <div class="purple-bar">
+            <h2>Welcome to the Gold Peach County<br>Library Website!</h2>
+            <p>Where we strive to make a positive impact on the community and offer literary resources at no cost to you. Please be sure to stop in and say hello to your library leadership and activate your account to be issued a library card for our branch. Hope to see you soon!</p>
+            <div class="link-text">
+                <p>GPC Staff Login</p>
+            </div>
+        </div>
+        
+    </div>
 </body>
 </html>
