--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <div class="logo-section">
-            <img src="/img/GOLDPEACHCOUNTY.png" alt="library-name" class="logo">
+            <a href="index.html"><img src="/img/GOLDPEACHCOUNTY.png" alt="library-name" class="logo"></a>
             <div class="logo-text">
                 <div class="yellow-bar"></div>
                 <p>virginia</p>
@@ -33,58 +33,61 @@
 
     <main>
         <h1>About Us: Overview</h1>
-        <aside>
-            <div><h3 class="top-aside-headline">Overview</h3>
-                <div class="aside-list"></div>
-                    <ul>
-                        <li class="aside-first">*Library Mission</li>
-                        <li class="aside-first">*Librarian</li>
-                </ul>
+        <div class="container">
+            <aside>
+                <div><h3 class="top-aside-headline">Overview</h3>
+                    <div class="aside-list">
+                        <ul>
+                            <li class="aside-first">*Library Mission</li>
+                            <li class="aside-first">*Librarian</li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-            <hr>
-            <div><h3>Staff</h3></div>
-            <hr>
-            <div><h3>Youth Events</h3></div>
-            <hr>
-            <div><h3>Hours & Holidays</h3></div>
-            <hr>
-            <div><h3>Library Policies</h3></div>
-        </aside>
-        <section>
-            <h3>Library Mission</h3>
-            <hr>
-            <div>
-                <h3>Mission</h3>
-                <p>The Gold Peach County Library is dedicated to fostering an information-literate community.</p>
-            </div>
-            <hr>
-            <div>
-                <h3>Vision</h3>
-                <ul>
-                    <li>The library serves as the center of expertise for information literacy skills.</li>
-                    <li>Information literacy instruction and library resources are seamlessly integrated into the community experience to serve at the point of need.</li>
-                </ul>
-            </div>
-            <hr>
-            <div>
-                <h3>Goals</h3>
-                <ul>
-                    <li>Meet our community at ther point of need through a robust, forward-things, and technologically innovative reference service.</li>
-                    <li>Offer a research-based program of people-centered inormation literacy instruction, creating both best practices and an empowered public.</li>
-                </ul>
-            </div>
-            <hr>
-            <div>
-                <h3>Values</h3>
-                <ul>
-                    <li>The library will adapt to organizational and environmental change.</li>
-                    <li>The library values creativity as a means to find elegant solutions to complex problems.</li>
-                    <li>The library seeks to creat opportunities to innovate.</li>
-                    <li>The library goes where the data leads us.</li>
-                </ul>
-            </div>
-        </section>
+                <hr>
+                <div><h3>Staff</h3></div>
+                <hr>
+                <div><h3>Youth Events</h3></div>
+                <hr>
+                <div><h3>Hours & Holidays</h3></div>
+                <hr>
+                <div><h3>Library Policies</h3></div>
+            </aside>
+
+            <section>
+                <h3 class="section-first-headline">Library Mission</h3>
+                <hr>
+                <div>
+                    <h3 class="section-headline">Mission</h3>
+                    <p class="section-headline">The Gold Peach County Library is dedicated to fostering an information-literate community.</p>
+                </div>
+                <hr>
+                <div>
+                    <h3 class="section-headline">Vision</h3>
+                    <ul>
+                        <li>The library serves as the center of expertise for information literacy skills.</li>
+                        <li>Information literacy instruction and library resources are seamlessly integrated into the community experience to serve at the point of need.</li>
+                    </ul>
+                </div>
+                <hr>
+                <div>
+                    <h3 class="section-headline">Goals</h3>
+                    <ul>
+                        <li>Meet our community at ther point of need through a robust, forward-things, and technologically innovative reference service.</li>
+                        <li>Offer a research-based program of people-centered inormation literacy instruction, creating both best practices and an empowered public.</li>
+                    </ul>
+                </div>
+                <hr>
+                <div>
+                    <h3 class="section-headline">Values</h3>
+                    <ul>
+                        <li>The library will adapt to organizational and environmental change.</li>
+                        <li>The library values creativity as a means to find elegant solutions to complex problems.</li>
+                        <li>The library seeks to creat opportunities to innovate.</li>
+                        <li>The library goes where the data leads us.</li>
+                    </ul>
+                </div>
+            </section>
+        </div>
     </main>
 </body>
 </html>
