add additional pages

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jaldi:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Library UI Project</title>
 </head>
 <body>
@@ -25,7 +25,7 @@
             </div>
         </div>
         <li>Books & More</li>
-        <li>My Account</li>
+        <li><a href="account.html">My Account</a></li>
         <li>My Cart</li>
         <!-- <img src="/img/search-bar.png" alt="search-bar"> -->
         <div class="search">
