--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>About Us</title>
 </head>
 <body>
@@ -20,9 +20,8 @@
         <li>Residents</li>
         <li>Location & Hours</li>
         <li><a href="about.html">About Us</a></li>
-        
         <li>Books & More</li>
-        <li>My Account</li>
+        <li><a href="account.html">My Account</a></li>
         <li>My Cart</li>
         <!-- <img src="/img/search-bar.png" alt="search-bar"> -->
         <div class="search">
