add book listing

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
         <li>Residents</li>
         <li>Location & Hours</li>
         <li><a href="about.html">About Us</a></li>
-        <li>Books & More</li>
+        <li><a href="book-listing.html">Books & More</a></li>
         <li><a href="account.html">My Account</a></li>
         <li>My Cart</li>
         <!-- <img src="/img/search-bar.png" alt="search-bar"> -->
