--- a/book-listing.html
+++ b/book-listing.html
@@ -48,21 +48,42 @@
     <!-- Favorites Book List -->
         <h2>Fave 5 for winter 2023</h2>
         <div class="book-grid">
-            <img src="/img/central.png" alt="">
-            <img src="/img/red-hair.png" alt="">
-            <img src="/img/bag.png" alt="">
-            <img src="/img/sweet.png" alt="">
-            <img src="/img/doctor.png" alt="">
+            <div>
+                <img src="/img/central.png" alt="">
+            </div>
+            <div>
+                <img src="/img/red-hair.png" alt="">
+            </div>
+            <div>
+                <img src="/img/bag.png" alt="">
+            </div>
+            <div>
+                <img src="/img/sweet.png" alt="">
+            </div>
+            <div>
+                <a href="book-desc.html"><img src="/img/doctor.png" alt=""></a>
+            </div>
         </div>
 
         <!-- All Books            -->
         <h2>All</h2>
         <div class="book-grid">
+            <div>
                 <img src="/img/circe.png" alt="">
+            </div>
+            <div>
                 <img src="/img/lady-tan.png" alt="">
-                <img src="/img/bag.png" alt="">
+            </div>
+            <div>
                 <img src="/img/dust-child.png" alt="">
+            </div>
+            <div>
+                <img src="/img/bag.png" alt="">
+            </div>
+            <div>
                 <img src="/img/leader-book.png" alt="">
+            </div>
+            
             </div>
         </div>
 
