--- a/book-desc.html
+++ b/book-desc.html
@@ -37,7 +37,7 @@
                 <p>Rating: 4/<span><a href="reviews.html">10 Reviews</a></span></p>
             </div>
             
-            <button class="check-out">Check Out</button>
+            <button class="check-out"><a href="checkout.html">Check Out</a></button>
         </section>
 
         <section class="full-desc">
