--- a/reviews.html
+++ b/reviews.html
@@ -20,7 +20,7 @@
         <li>Residents</li>
         <li>Location & Hours</li>
         <li><a href="about.html">About Us</a></li>
-        <li>Books & More</li>
+        <li><a href="book-desc.html">Books & More</a></li>
         <li>My Account</li>
         <li>My Cart</li>
         <div class="search">
