Add additional pages

--- a/about.html
+++ b/about.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="css/style.css">
     <title>About Us</title>
 </head>
-<body>
+<body>  
     <nav>
         <div class="logo-section">
-            <a href="index.html"><img src="/img/GOLDPEACHCOUNTY.png" alt="library-name" class="logo"></a>
+            <a href="index.html"><img src="./img/GOLDPEACHCOUNTY.png" alt="library-name" class="logo"></a>
             <div class="logo-text">
                 <div class="yellow-bar"></div>
                 <p>virginia</p>
@@ -23,10 +23,10 @@
         <li><a href="book-listing.html">Books & More</a></li>
         <li><a href="account.html">My Account</a></li>
         <li>My Cart</li>
-        <!-- <img src="/img/search-bar.png" alt="search-bar"> -->
+        
         <div class="search">
             <input type="text" placeholder="Search..." class="search-bar">
-            <img src="/img/search-icon.png" alt="search-icon" class="search-icon">
+            <img src="./img/search-icon.png" alt="search-icon" class="search-icon">
         </div>
     </nav>
 
