--- a/account.html
+++ b/account.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <div class="logo-section">
-            <a href="index.html"><img src="/img/GOLDPEACHCOUNTY.png" alt="library-name" class="logo"></a>
+            <a href="index.html"><img src="./img/GOLDPEACHCOUNTY.png" alt="library-name" class="logo"></a>
             <div class="logo-text">
                 <div class="yellow-bar"></div>
                 <p>virginia</p>
@@ -25,7 +25,7 @@
         <li>My Cart</li>
         <div class="search">
             <input type="text" placeholder="Search..." class="search-bar">
-            <img src="/img/search-icon.png" alt="search-icon" class="search-icon">
+            <img src="./img/search-icon.png" alt="search-icon" class="search-icon">
         </div>
     </nav>
 
@@ -42,12 +42,12 @@
             <div class="pass">
                 <input type="text" placeholder="Password*">
                 <label for="password"></label>
-                <img src="/img/eye.png" alt="eye" width="25px" height="25px">
+                <img src="./img/eye.png" alt="eye" width="25px" height="25px">
             </div>
             <div class="under-pass">
                     <div>
                         <input type="checkbox">Keep me signed in
-                        <img src="/img/circle.png" width="20px" height="20px"><img src="/img/i.png" width="5px" height="10px" class="second-img-under-pass">
+                        <img src="./img/circle.png" width="20px" height="20px"><img src="./img/i.png" width="5px" height="10px" class="second-img-under-pass">
                     </div>
                     <p>Forgot Password?</p>
             </div>
