--- a/checkout.html
+++ b/checkout.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/checkout.css">
-    <title>Confirm Page</title>
+    <title>Checkout Page</title>
 </head>
 <body>
     <div class="container">
@@ -57,7 +57,7 @@
             </div>
             <div class="book-second-section">
                 <div class="picture">
-                    <img src="img/doctor.png" alt="doctor">
+                    <img src="./img/doctor.png" alt="doctor">
                     <p>By Jasmine Brown</p>
                 </div>
                 
