--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 </head>
 <body>
     <nav>
-        <img src="/img/home-pic.png" alt="home picture" class="home-icon">
+        <img src="./img/home-pic.png" alt="home picture" class="home-icon">
         <li>Residents</li>
         <li>Location & Hours</li>
         <li><a href="about.html">About Us</a></li>
         <div class="logo-section">
-            <img src="/img/GOLDPEACHCOUNTY.png" alt="library-name" class="logo">
+            <img src="./img/GOLDPEACHCOUNTY.png" alt="library-name" class="logo">
             <div class="logo-text">
                 <div class="yellow-bar"></div>
                 <p>virginia</p>
@@ -27,10 +27,9 @@
         <li>Books & More</li>
         <li><a href="account.html">My Account</a></li>
         <li>My Cart</li>
-        <!-- <img src="/img/search-bar.png" alt="search-bar"> -->
         <div class="search">
             <input type="text" placeholder="Search..." class="search-bar">
-            <img src="/img/search-icon.png" alt="search-icon" class="search-icon">
+            <img src="./img/search-icon.png" alt="search-icon" class="search-icon">
         </div>
     </nav>
 
@@ -49,14 +48,14 @@
                     <h5>contact information:</h5>
                     <p><strong>Office:</strong> 8:00-4:30 M-F. Branch hours vary. Please call your branch's direct line with account & ebook questions.</p>
                         <div class="text1">
-                            <img src="/img/phone.png" alt="phone icon" class="icon"/><p>123-456-6780 | T 804</p>
+                            <img src="./img/phone.png" alt="phone icon" class="icon"/><p>123-456-6780 | T 804</p>
                         </div>
                         <div class="text2">
-                            <img src="/img/email.png" alt="email icon" class="icon" /><p>Library@goldpeachcounty.gov</p>
+                            <img src="./img/email.png" alt="email icon" class="icon" /><p>Library@goldpeachcounty.gov</p>
                         </div>
                             
                         <div class="text3">
-                            <img src="/img/map.png" alt="map icon" class="icon" /><p>12000 Peachland Dr., Suite 444 Peachland, VA 12345</p>
+                            <img src="./img/map.png" alt="map icon" class="icon" /><p>12000 Peachland Dr., Suite 444 Peachland, VA 12345</p>
                         </div>  
                 </div>
             </div>
