--- a/reviews.html
+++ b/reviews.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reviews.css">
-    <title>Account Page</title>
+    <title>Reviews Page</title>
 </head>
 <body>
     <nav>
         <div class="logo-section">
-            <a href="index.html"><img src="/img/GOLDPEACHCOUNTY.png" alt="library-name" class="logo"></a>
+            <a href="index.html"><img src="./img/GOLDPEACHCOUNTY.png" alt="library-name" class="logo"></a>
             <div class="logo-text">
                 <div class="yellow-bar"></div>
                 <p>virginia</p>
@@ -25,7 +25,7 @@
         <li>My Cart</li>
         <div class="search">
             <input type="text" placeholder="Search..." class="search-bar">
-            <img src="/img/search-icon.png" alt="search-icon" class="search-icon">
+            <img src="./img/search-icon.png" alt="search-icon" class="search-icon">
         </div>
     </nav>
 
@@ -33,36 +33,36 @@
 
         <section class="reviews">
             <h1>Customer Reviews</h1>
-            <img src="/img/stars.png" alt="stars"><p>4 out of 5</p>
+            <img src="./img/stars.png" alt="stars"><p>4 out of 5</p>
             <p>13,754 global ratings</p>
 
             <div class="reveiw-bars">
             <div class="btn">
                 <p>5 Star</p>
-                <img src="/img/gray-bar.png" class="outer-btn" /><img src="/img/lrg-yellow-bar.png" class="inner-btn" />
+                <img src="./img/gray-bar.png" class="outer-btn" /><img src="./img/lrg-yellow-bar.png" class="inner-btn" />
                 <p>79%</p>
             </div>
 
             <div class="btn">
                 <p>4 Star</p>
-                <img src="/img/gray-bar.png" class="outer-btn"  /><img src="/img/med-yellow-bar.png" class="inner-btn" />
+                <img src="./img/gray-bar.png" class="outer-btn"  /><img src="./img/med-yellow-bar.png" class="inner-btn" />
                 <p>9%</p>
             </div>
 
             <div class="btn">
                 <p>3 Star</p>
-                <img src="/img/gray-bar.png" class="outer-btn" /><img src="/img/small-yellow-bar.png" class="inner-btn" />
+                <img src="./img/gray-bar.png" class="outer-btn" /><img src="./img/small-yellow-bar.png" class="inner-btn" />
                 <p>2%</p>
             </div>
 
             <div class="btn">
-                <img src="/img/gray-bar.png" class="outer-btn" /><img src="" class="inner-btn" />
+                <img src="./img/gray-bar.png" class="outer-btn" /><img src="" class="inner-btn" />
                 <p>0%</p>
             </div>
 
             <div class="btn">
                 <p>1 Star</p>
-                <img src="/img/gray-bar.png" class="outer-btn" />
+                <img src="./img/gray-bar.png" class="outer-btn" />
                 <p>0%</p>
             </div>
             <button class="write-review-btn">Write a Review</button>
@@ -72,7 +72,7 @@
 
         <section class="book">
             <div>
-                <img src="/img/doctor.png" alt="doctor">
+                <img src="./img/doctor.png" alt="doctor">
 
             </div>
             <div class="third-review-col">
@@ -88,16 +88,16 @@
                 </div>
 
                 <div class="user-info">
-                    <img src="img/user-img.png" alt="">
+                    <img src="./img/user-img.png" alt="">
                     <p>thecatlady444</p>
                 </div>
 
                 <div class="flag">
-                    <img src="img/flag.png">
+                    <img src="./img/flag.png">
                 </div>
 
                 <div class="stars-title">
-                    <img src="img/all-stars.png" alt="stars" width="200px">
+                    <img src="./img/all-stars.png" alt="stars" width="200px">
                     <h5><strong>A Book To Remember!</strong></h5>
                 </div>
 
