--- a/book-desc.html
+++ b/book-desc.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/book-desc.css">
-    <title>Account Page</title>
+    <title>Book Description Page</title>
 </head>
 <body>
     <nav>
         <div class="logo-section">
-            <a href="index.html"><img src="/img/GOLDPEACHCOUNTY.png" alt="library-name" class="logo"></a>
+            <a href="index.html"><img src="./img/GOLDPEACHCOUNTY.png" alt="library-name" class="logo"></a>
             <div class="logo-text">
                 <div class="yellow-bar"></div>
                 <p>virginia</p>
@@ -25,15 +25,15 @@
         <li>My Cart</li>
         <div class="search">
             <input type="text" placeholder="Search..." class="search-bar">
-            <img src="/img/search-icon.png" alt="search-icon" class="search-icon">
+            <img src="./img/search-icon.png" alt="search-icon" class="search-icon">
         </div>
     </nav>
 
     <div class="container">
         <section class="book-info">
-            <img src="/img/doctor.png" alt="book">
+            <img src="./img/doctor.png" alt="book">
             <div class="rating">
-                <img src="/img/stars.png" alt="stars">
+                <img src="./img/stars.png" alt="stars">
                 <p>Rating: 4/<span><a href="reviews.html">10 Reviews</a></span></p>
             </div>
             
