--- a/book-listing.html
+++ b/book-listing.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/book-listing.css">
-    <title>Account Page</title>
+    <title>Book Listing Page</title>
 </head>
 <body>
     <nav>
         <div class="logo-section">
-            <a href="index.html"><img src="/img/GOLDPEACHCOUNTY.png" alt="library-name" class="logo"></a>
+            <a href="index.html"><img src="./img/GOLDPEACHCOUNTY.png" alt="library-name" class="logo"></a>
             <div class="logo-text">
                 <div class="yellow-bar"></div>
                 <p>virginia</p>
@@ -25,7 +25,7 @@
         <li>My Cart</li>
         <div class="search">
             <input type="text" placeholder="Search..." class="search-bar">
-            <img src="/img/search-icon.png" alt="search-icon" class="search-icon">
+            <img src="./img/search-icon.png" alt="search-icon" class="search-icon">
         </div>
     </nav>
 
@@ -49,19 +49,19 @@
         <h2>Fave 5 for winter 2023</h2>
         <div class="book-grid">
             <div>
-                <img src="/img/central.png" alt="">
+                <img src="./img/central.png" alt="">
             </div>
             <div>
-                <img src="/img/red-hair.png" alt="">
+                <img src="./img/red-hair.png" alt="">
             </div>
             <div>
-                <img src="/img/bag.png" alt="">
+                <img src="./img/bag.png" alt="">
             </div>
             <div>
-                <img src="/img/sweet.png" alt="">
+                <img src="./img/sweet.png" alt="">
             </div>
             <div>
-                <a href="book-desc.html"><img src="/img/doctor.png" alt=""></a>
+                <a href="book-desc.html"><img src="./img/doctor.png" alt=""></a>
             </div>
         </div>
 
@@ -69,16 +69,16 @@
         <h2>All</h2>
         <div class="book-grid">
             <div>
-                <img src="/img/circe.png" alt="">
+                <img src="./img/circe.png" alt="">
             </div>
             <div>
-                <img src="/img/lady-tan.png" alt="">
+                <img src="./img/lady-tan.png" alt="">
             </div>
             <div>
-                <img src="/img/dust-child.png" alt="">
+                <img src="./img/dust-child.png" alt="">
             </div>
             <div>
-                <img src="/img/bag.png" alt="">
+                <img src="./img/bag.png" alt="">
             </div>
             <div>
                 <img src="/img/leader-book.png" alt="">
