--- a/order-confirm.html
+++ b/order-confirm.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/order-confirm.css">
-    <title>Account Page</title>
+    <title>Confirm Page</title>
 </head>
 <body>
     <nav>
         <div class="logo-section">
-            <a href="index.html"><img src="/img/GOLDPEACHCOUNTY.png" alt="library-name" class="logo"></a>
+            <a href="index.html"><img src="./img/GOLDPEACHCOUNTY.png" alt="library-name" class="logo"></a>
             <div class="logo-text">
                 <div class="yellow-bar"></div>
                 <p>virginia</p>
@@ -25,7 +25,7 @@
         <li>My Cart</li>
         <div class="search">
             <input type="text" placeholder="Search..." class="search-bar">
-            <img src="/img/search-icon.png" alt="search-icon" class="search-icon">
+            <img src="./img/search-icon.png" alt="search-icon" class="search-icon">
         </div>
     </nav>
 
